--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
         </div>
     </div>
     <div id="content">
-        <div id="wave">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0c0c0c" fill-opacity="1" d="M0,320L40,304C80,288,160,256,240,229.3C320,203,400,181,480,192C560,203,640,245,720,250.7C800,256,880,224,960,213.3C1040,203,1120,213,1200,208C1280,203,1360,181,1400,170.7L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
-        </div>
         <div id="aboutus">
+            <div class="wavedown">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0c0c0c" fill-opacity="1" d="M0,320L40,304C80,288,160,256,240,229.3C320,203,400,181,480,192C560,203,640,245,720,250.7C800,256,880,224,960,213.3C1040,203,1120,213,1200,208C1280,203,1360,181,1400,170.7L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
+            </div>
 
 
+            <div class="waveup">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0c0c0c" fill-opacity="1" d="M0,288L48,245.3C96,203,192,117,288,85.3C384,53,480,75,576,96C672,117,768,139,864,133.3C960,128,1056,96,1152,74.7C1248,53,1344,43,1392,37.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+            </div>
+        </div>
+
+        <div id="members">
+           
         </div>
 
     </div>
