--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <nav>
+        <a href="#aboutusAnchor">About us</a>
         <a href="#aboutus">Members</a>
-        <a href="#aboutus">About us</a>
 
     </nav>
     <div id="intro">
@@ -28,6 +28,18 @@
             <div class="wavedown">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0c0c0c" fill-opacity="1" d="M0,320L40,304C80,288,160,256,240,229.3C320,203,400,181,480,192C560,203,640,245,720,250.7C800,256,880,224,960,213.3C1040,203,1120,213,1200,208C1280,203,1360,181,1400,170.7L1440,160L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
             </div>
+
+            <div id="aboutusAnchor"></div>
+
+            <div id="aboutusContent">
+                <h1>About us</h1>
+                <p>Sme skupina študentov, ktorí študujú na VUT FIT a vo svojom voľnom čase sa zdokonalujú v programovaní. Každý z nás je zameraný na iné odvetvie v informatike. Navzájom sa dopíňame a tvojíme skupinu developérov <b>WeDevs</b>.</p>
+            </div>
+
+            <div id="aboutusImage">
+                
+            </div>
+
 
 
             <div class="waveup">
