Edit text of Dalibor Kralik

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <a href="#aboutusAnchor">About us</a>
-        <a href="#daliborkralik">Members</a>
+        <a href="#memberNadpis">Members</a>
 
     </nav>
     <div id="intro">
@@ -42,11 +42,7 @@
                     skupinu developérov <b>WeDevs</b>.</p>
             </div>
 
-            <div id="aboutusImage">
-
-            </div>
-
-
+            <div id="aboutusImage"></div>
 
             <div class="waveup">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -58,25 +54,27 @@
         </div>
 
         <div id="members">
-            <h1 class=membersNadpis>Members</h1>
+            <h1 class=membersNadpis id="memberNadpis">Members</h1>
             <div id="daliborkralik">
                 <div id="daliborLeft">
                     <img src="me_grayscale.png" alt="daliborkralik">
                 </div>
                 <div id="daliborRight">
-                    <h1 class=membersNadpis>Dalibor Králik</h1>
+                    <h1 class=membersNadpis><b><a href="http://wedevs.sk/daliborkralik/">Dalibor Králik</a></b></h1>
                     <p>Som študentom druhého ročníka bakalárskeho štúdia na FIT VUT v Brne. V IT sa zameriavam na Front-end a snažím sa v tejto oblasti vo svojom voľnom čase venovať a zdokonaľovať.</p>
                     <br>
                     <p>Od 6 rokov sa venujem tenisu závodne na národnej úrovni a taktiež pôsobim ako národný tenisový rozhodca na Slovensku.</p>
                     <br>
-                    <p> Už viac ako rok pôsobím v neziskovej organizácií <b><a href="https://eduera.sk/">EduEra</a></b>, ktorá sa zameriava na neformálne vzdelávanie mládeže, Erasmus+ projekty a Projekty Európskeho zboru solidarity. Zastvávam funckiu marketingového asistenta, starám sa o sociálne siete, tvorím a realizujem marketingové kampane a pôsobim ako supervisor organizcie.</p>
-
+                    <p> Už viac ako rok pôsobím v neziskovej organizácií <b><a href="https://eduera.sk/ " target="_blank">EduEra</a></b>, ktorá sa zameriava na neformálne vzdelávanie mládeže, Erasmus+ projekty a Projekty Európskeho zboru solidarity. Zastvávam funkciu marketingového asistenta, starám sa o sociálne siete, tvorím a realizujem marketingové kampane a pôsobim ako supervisor organizácie.</p>
                 </div>
-
-
-
             </div>
 
+            <div id="patriksehnoutek">
+                <div class="wavedown">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0c0c0c" fill-opacity="1" d="M0,128L48,160C96,192,192,256,288,240C384,224,480,128,576,112C672,96,768,160,864,208C960,256,1056,288,1152,266.7C1248,245,1344,171,1392,133.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+                </div>
+
+            </div>
         </div>
 
     </div>
