Create Marcel Feiler

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div id="patriksehnoutekContent">
-                    <div id="patrikright">
+                    <div id="patrikRight">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
                         <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
                             sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
@@ -99,7 +99,7 @@
                             purus, vel </p>
                     </div>
 
-                    <div id="patrikleft"></div>
+                    <div id="patrikLeft"></div>
                 </div>
                 <div class="waveup">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -112,12 +112,35 @@
 
 
             <div id="marcelfeiler">
+                <div id="marcelLeft">
+                    <h1><b><a href="">Marcel Feiler</a></b></h1>
+                    <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
+                        sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
+                        tincidunt. Nullam at arcu a est sollicitudin euismod. Fusce tellus. Etiam posuere lacus quis
+                        dolor. Et harum quidem rerum facilis est et expedita distinctio. Fusce aliquam vestibulum
+                        ipsum. In enim a arcu imperdiet malesuada. Vivamus luctus egestas leo.</p>
+                    <br>
+                    <p>Fusce consectetuer risus a nunc. Mauris suscipit, ligula sit amet pharetra semper, nibh ante
+                        cursus purus, vel sagittis velit mauris vel metus. Curabitur vitae diam non enim vestibulum
+                        interdum. Cras elementum. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus
+                        purus, vel </p>
 
-                <svg width="2006" height="521" viewBox="0 0 2006 521" fill="none" xmlns="http://www.w3.org/2000/svg">
+                </div>
+                <div id="marcelRight">
+
+                </div>
+
+                <svg width="1222" height="224" viewBox="0 0 1222 224" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M7.5 257C146.5 311.5 205.5 372 512 283C757.2 211.8 1006.83 294 1101 344C1144.33 364.167 1250.6 402.8 1329 396C1427 387.5 1599 276.5 1607.5 183C1616 89.5 1451 -52 1307.5 65.5C1164 183 1114 405.5 1407.5 464.5C1642.3 511.7 1902.33 503.167 2003 493"
-                        stroke="white" stroke-width="40" />
+                        d="M14.5 139.5C42.3333 103.333 107.967 81.2128 187 139.5C267 198.5 325.667 137.667 363 95C411 45.8333 562.5 21.806 562.5 129C562.5 227 400.5 237.5 400.5 129C400.5 46.5076 490 22 628.5 22C767 22 751.336 90.5105 817 150.5C882.664 210.489 965.677 187.5 1039 95C1104.6 12.238 1187.33 13.8333 1217 22"
+                        stroke="white" stroke-width="2%" />
                 </svg>
+
+
+
+
+
+
 
 
 
