Error with patriksehounet waveup WAVE

--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
 
         <div id="members">
             <h1 class=membersNadpis id="memberNadpis">Members</h1>
+            <div id="memberButtons">
+                <a href="#daliborkralikNavigation">Dalibor Králik</a>
+                <a href="#patriksehnoutekNavigation">Patrik Sehnoutek</a>
+                <a href="#marcelFeiler">Marcel Feiler</a>
+                <a href="">Lukáš Chytil</a>
+                <a href="">Ján Svitana</a>
+            </div>
+            
             <div id="daliborkralik">
+                <div id="daliborkralikNavigation"></div>
                 <div id="daliborLeft">
                     <img src="me_grayscale.png" alt="daliborkralik">
                 </div>
@@ -83,8 +92,9 @@
                         </path>
                     </svg>
                 </div>
-
+                
                 <div id="patriksehnoutekContent">
+                    <p id="patriksehnoutekNavigation"></p>
                     <div id="patrikRight">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
                         <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
@@ -135,9 +145,9 @@
                         d="M14.5 139.5C42.3333 103.333 107.967 81.2128 187 139.5C267 198.5 325.667 137.667 363 95C411 45.8333 562.5 21.806 562.5 129C562.5 227 400.5 237.5 400.5 129C400.5 46.5076 490 22 628.5 22C767 22 751.336 90.5105 817 150.5C882.664 210.489 965.677 187.5 1039 95C1104.6 12.238 1187.33 13.8333 1217 22"
                         stroke="white" stroke-width="2%" />
                 </svg>
+            </div>
 
-
-
+            <div id="lukaschytil">
 
 
 
@@ -146,6 +156,8 @@
 
 
             </div>
+
+
 
 
         </div>
