--- a/index.html
+++ b/index.html
@@ -166,14 +166,25 @@
                         d="M1207.91 139.635C1180.13 103.641 1114.53 81.5605 1035.41 139.4C955.334 197.948 896.75 137.389 859.474 94.9204C811.541 45.975 660.073 21.8817 659.928 128.451C659.796 225.88 821.782 236.539 821.928 128.671C822.04 46.6597 732.573 22.1732 594.073 21.9848C455.573 21.7964 471.145 89.9288 405.4 149.479C339.655 209.029 256.673 186.061 183.475 94.0009C117.987 11.6321 35.2548 13.1056 5.57381 21.1843"
                         stroke="white" stroke-width="2%" />
                 </svg>
+            </div>
+
+            <div id="jansvitana">
+                <svg class="wavedown" width="4038" height="329" viewBox="0 0 4038 329" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M0 0H4038V147.304C4038 147.304 3937 147.304 3869.5 209.327C3736.36 331.668 3612.5 275.411 3450 209.327C3287.5 143.243 3122.78 137.173 3036.5 147.304C2807 174.255 2587.63 289.147 2488 308.269C2186 366.23 2181.5 292 1973 186.438C1764.5 80.8757 1604.5 204.897 1363.5 248.461C1148.5 287.324 972.057 215.978 910.5 186.438C592 33.5957 422.498 147.858 373.5 161.703C96.5 239.97 0 76.4211 0 76.4211V0Z"
+                        fill="#0C0C0C" />
+                </svg>
+                <div id="jansvitanaLeft">
+                   
 
 
-
-
-
+                </div>
 
 
             </div>
+
+
 
 
 
