Finished resposivity for @media >768 && < 1023

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="sk">
 
 <head>
+    <!--SEO-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space</title>
+    <title>WeDevs</title>
+    <meta name="description" content="Sme skupina študentov, ktorí študujú na FIT VUT a vo svojom voľnom čase sa zdokonalujú v
+    programovaní. Spolu tvoríme skupinu developerov WeDevs" />
+    <meta name="author" content="Dalibor Králik dadokralik@gmail.com" />
+    <meta name="copyright" content="dadokralik@gmail.com" />
+
+    <!--Links for Javasript and CSS-->
     <script src="script.js" defer></script>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
@@ -36,6 +43,7 @@
 
             <div id="aboutusContent">
                 <h1>About us</h1>
+                <br>
                 <p>Sme skupina študentov, ktorí študujú na FIT VUT a vo svojom voľnom čase sa zdokonalujú v
                     programovaní. Každý z nás je zameraný na iné odvetvie v informatike. Navzájom sa dopĺňame a tvoríme
                     skupinu developerov <b>WeDevs</b>.</p>
@@ -52,11 +60,11 @@
         <div id="members">
             <h1 class=membersNadpis id="memberNadpis">Members</h1>
             <div id="memberButtons">
-                <a href="#daliborkralikNavigation">Dalibor Králik</a>
-                <a href="#patriksehnoutekNavigation">Patrik Sehnoutek</a>
-                <a href="#marcelFeiler">Marcel Feiler</a>
-                <a href="#lukaschytilNavigation">Lukáš Chytil</a>
-                <a href="">Ján Svitana</a>
+                <a href="#daliborkralikNavigation">Dalibor <span>Králik</span></a>
+                <a href="#patriksehnoutekNavigation">Patrik <span>Sehnoutek</span></a>
+                <a href="#marcelLeft">Marcel <span>Feiler</span></a>
+                <a href="#lukaschytilNavigation">Lukáš <span>Chytil</span></a>
+                <a href="">Ján <span>Svitana</span></a>
             </div>
 
             <div id="daliborkralik">
@@ -89,7 +97,7 @@
 
                 <div id="patriksehnoutekContent">
                     <nav id="patriksehnoutekNavigation"></nav>
-                    <div id="patrikRight">
+                    <div id="patrikLeft">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
                         <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
                             sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
@@ -102,8 +110,8 @@
                             interdum. Cras elementum. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus
                             purus, vel </p>
                     </div>
+                    <div id="patrikRight"></div>
 
-                    <div id="patrikLeft"></div>
                 </div>
 
                 <svg class="waveup" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -191,7 +199,7 @@
     </div>
 
     <footer>
-        <p>Copyright © 2021 | created by Dalibor Králik</p>
+        <p>© Copyright 2021 | created by Dalibor Králik</p>
 
     </footer>
 
