Finished responsivity @media > 640 && < 767

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div id="memberButtons">
                 <a href="#daliborkralikNavigation">Dalibor <span>Králik</span></a>
                 <a href="#patriksehnoutekNavigation">Patrik <span>Sehnoutek</span></a>
-                <a href="#marcelLeft">Marcel <span>Feiler</span></a>
+                <a href="#marcelNavigation">Marcel <span>Feiler</span></a>
                 <a href="#lukaschytilNavigation">Lukáš <span>Chytil</span></a>
                 <a href="">Ján <span>Svitana</span></a>
             </div>
@@ -124,6 +124,7 @@
 
 
             <div id="marcelfeiler">
+                <nav id="marcelNavigation"></nav>
                 <div id="marcelLeft">
                     <h1><b><a href="">Marcel Feiler</a></b></h1>
                     <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
