--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
 
 <body>
     <nav>
-        <a href="#aboutusAnchor">About us</a>
-        <a href="#memberNadpis">Members</a>
+        <div id="burger" onclick="triggerUl()">
+            <div class="burgerlines"></div>
+            <div class="burgerlines"></div>
+            <div class="burgerlines"></div>
+            
+        </div>
 
+        <ul id="navUl">
+            <li><a href="#aboutusAnchor">About us</a></li>
+            <li><a href="#memberNadpis">Members</a></li>
+        </ul>
     </nav>
     <div id="intro">
         <h1 id="nadpis">WeDevs</h1>
@@ -95,7 +103,7 @@
                         d="M0,128L48,160C96,192,192,256,288,240C384,224,480,128,576,112C672,96,768,160,864,208C960,256,1056,288,1152,266.7C1248,245,1344,171,1392,133.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
                     </path>
                 </svg>
-                
+
                 <div id="patriksehnoutekContent">
                     <div id="patrikLeft">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
