--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="copyright" content="dadokralik@gmail.com" />
 
     <!--Links for Javasript and CSS-->
-    <script src="script.js" defer></script>
+    <script src="script.js" type="text/javascript" defer></script>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
@@ -49,7 +49,7 @@
 
             <div id="aboutusAnchor"></div>
 
-            <div id="aboutusContent">
+            <div id="aboutusContent" class="scrollElement">
                 <h1>About us</h1>
                 <br>
                 <p>Sme skupina študentov, ktorí študujú na FIT VUT a vo svojom voľnom čase sa zdokonalujú v
@@ -80,7 +80,7 @@
                 <div id="daliborLeft">
                     <img src="me_grayscale.png" alt="daliborkralik">
                 </div>
-                <div id="daliborRight">
+                <div id="daliborRight" class="scrollElement">
                     <h1><b><a href="http://wedevs.sk/daliborkralik/">Dalibor Králik</a></b></h1>
                     <p>Som študentom druhého ročníka bakalárskeho štúdia na FIT VUT v Brne. V IT sa zameriavam na
                         Front-end a snažím sa v tejto oblasti vo svojom voľnom čase venovať a zdokonaľovať.</p>
@@ -105,7 +105,7 @@
                 </svg>
 
                 <div id="patriksehnoutekContent">
-                    <div id="patrikLeft">
+                    <div id="patrikLeft" class="scrollElement">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
                         <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
                             sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
@@ -133,7 +133,7 @@
 
             <div id="marcelfeiler">
                 <nav id="marcelNavigation"></nav>
-                <div id="marcelLeft">
+                <div id="marcelLeft" class="scrollElement">
                     <h1><b><a href="">Marcel Feiler</a></b></h1>
                     <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
                         sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
@@ -164,7 +164,7 @@
 
 
                 </div>
-                <div id="lukasRight">
+                <div id="lukasRight" class="scrollElement">
                     <h1><b><a href="">Lukas Chytil</a></b></h1>
                     <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
                         sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
