Add favicon to page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeDevs</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Sme skupina študentov, ktorí študujú na FIT VUT a vo svojom voľnom čase sa zdokonalujú v
     programovaní. Spolu tvoríme skupinu developerov WeDevs" />
     <meta name="author" content="Dalibor Králik dadokralik@gmail.com" />
