Add PatrikSehnoutek text

--- a/index.html
+++ b/index.html
@@ -108,16 +108,9 @@
                 <div id="patriksehnoutekContent">
                     <div id="patrikLeft" class="scrollElement">
                         <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
-                        <p>Integer pellentesque quam vel velit. Nullam lectus justo, vulputate eget mollis sed, tempor
-                            sed magna. Fusce consectetuer risus a nunc. Duis risus. Nam sed tellus id magna elementum
-                            tincidunt. Nullam at arcu a est sollicitudin euismod. Fusce tellus. Etiam posuere lacus quis
-                            dolor. Et harum quidem rerum facilis est et expedita distinctio. Fusce aliquam vestibulum
-                            ipsum. In enim a arcu imperdiet malesuada. Vivamus luctus egestas leo.</p>
+                        <p>Som študentom druhého ročníka bakalárskeho štúdia na FIT VUT v Brne. Programovaniu som sa začal venovať počas štúdia na gymnáziu. Svet počítačov a neobmedzených možností ma ihneď zaujal. Zúčastnil som sa niekoľkých súťaží ako Zenit, Kasiopea či celoročnej súťaže KSI na Masarykovej univerzite v Brne. </p>
                         <br>
-                        <p>Fusce consectetuer risus a nunc. Mauris suscipit, ligula sit amet pharetra semper, nibh ante
-                            cursus purus, vel sagittis velit mauris vel metus. Curabitur vitae diam non enim vestibulum
-                            interdum. Cras elementum. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus
-                            purus, vel </p>
+                        <p>Minulý rok sa nám s kamarátom podarilo vydať počítačovú <a href="https://store.steampowered.com/app/1376300/Our_Past/">hru OUR PAST</a>, ktorú sme publikovali na internetovom obchode <a href="https://store.steampowered.com/app/1376300/Our_Past/">Steam.</a> Od skorého detstva som sa venoval futbalu. Avšak kvôli zraneniu som musel prestať hrávať. K mojim ďalším obľúbeným aktivitám patrí predovšetkým turistika, futsal a behanie.</p>
                     </div>
                     <div id="patrikRight"></div>
 
