Add link to github

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="me_grayscale.png" alt="daliborkralik">
                 </div>
                 <div id="daliborRight" class="scrollElement">
-                    <h1><b><a href="http://wedevs.sk/daliborkralik/">Dalibor Králik</a></b></h1>
+                    <h1><b><a href="https://github.com/MrDalo">Dalibor Králik</a></b></h1>
                     <p>Som študentom druhého ročníka bakalárskeho štúdia na FIT VUT v Brne. V IT sa zameriavam na
                         Front-end a snažím sa v tejto oblasti vo svojom voľnom čase venovať a zdokonaľovať. 
                         Aktuálne však pracujem pre Vysoké učení technické (VUT) kde programujem a tvorím ETL procesy a datové kocky v SAP BW -> transformujem RAW data do použitelnej a požadovanej formy pre analytikov VUT.</p>
@@ -108,7 +108,7 @@
 
                 <div id="patriksehnoutekContent">
                     <div id="patrikLeft" class="scrollElement">
-                        <h1><b><a href="">Patrik Sehnoutek</a></b></h1>
+                        <h1><b><a href="https://github.com/pat0s">Patrik Sehnoutek</a></b></h1>
                         <p>Som študentom druhého ročníka bakalárskeho štúdia na FIT VUT v Brne. Programovaniu som sa začal venovať počas štúdia na gymnáziu. Svet počítačov a neobmedzených možností ma ihneď zaujal. Zúčastnil som sa niekoľkých súťaží ako Zenit, Kasiopea či celoročnej súťaže KSI na Masarykovej univerzite v Brne. </p>
                         <br>
                         <p>Minulý rok sa nám s kamarátom podarilo vydať počítačovú <a href="https://store.steampowered.com/app/1376300/Our_Past/">hru OUR PAST</a>, ktorú sme publikovali na internetovom obchode <a href="https://store.steampowered.com/app/1376300/Our_Past/">Steam</a>. Od skorého detstva som sa venoval futbalu. Avšak kvôli zraneniu som musel prestať hrávať. K mojim ďalším obľúbeným aktivitám patrí predovšetkým turistika, futsal a behanie.</p>
