Add SEO and GA tag to web

--- a/index.html
+++ b/index.html
@@ -2,16 +2,49 @@
 <html lang="sk">
 
 <head>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZJRP9QW8E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-6ZJRP9QW8E');
+    </script>
     <!--SEO-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeDevs</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="Sme skupina študentov, ktorí študujú na FIT VUT a vo svojom voľnom čase sa zdokonalujú v
+    <meta name="description" content="Sme skupina študentov, ktorí študujú na FIT BUT a vo svojom voľnom čase sa zdokonalujú v
     programovaní. Spolu tvoríme skupinu developerov WeDevs" />
     <meta name="author" content="Dalibor Králik dadokralik@gmail.com" />
     <meta name="copyright" content="dadokralik@gmail.com" />
+    <meta name="keywords" content="IT, Dalibor, DaliborKralik, Dalibor Králik, Dalibor Kralik, Králik, Kralik, 
+    frontend, frontend developer, front-end, fornt-end developer, ETL, SAP, SAP BW, BW, business warehouse,
+    SAP BW4Hana, BW4Hana, personal, personal webpage, ETL developer, web apps, web, application, application developer,
+    Patrik Sehnoutek, Patrik, Sehnoutek, FIT VUT, FIT BUT, VUT, FIT, BUT, Our Past, our past, OurPast,
+    Jan Svitana, Ján Svitana, Ján, Svitana, JanSvitana, MarcelFeiler, Marcel Feiler, Feiler, Lukáš Chytil, Lukas Chytil, Chytil, LukasChytil,
+    WeDevs, wedevs, we devs, We Devs, we, devs">
+
+    <meta property="og:locale" content="sk_SK" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="WeDevs" />
+    <meta property="og:site_name" content="WeDevs" />
+    <meta property="og:description" content="Sme skupina študentov, ktorí študujú na FIT BUT a vo svojom voľnom čase sa zdokonalujú v
+    programovaní. Spolu tvoríme skupinu developerov WeDevs" />
+    <meta property="og:url" content="https://wedevs.sk/" />
+    <meta property="og:image" content="https://wedevs.sk/seoImage.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="899" />
+    <meta property="og:image:height" content="899" />
+    <meta property="og:image:alt" content="WeDevs" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@WeDevs"/>
+
+
 
     <!--Links for Javasript and CSS-->
     <script src="script.js" type="text/javascript" defer></script>
